# xgparse

./: README.md  pyproject.toml
docs/: xg_format.pas
src/xgparse/: __init__.py  convertxg.py  convertxg2txt.py  extractxgdata.py  xgimport.py  xgstruct.py  xgutils.py  xgzarc.py
