[project]
name = "xgparse"
version = "0.1.3"
authors = [
  { name="Gergely Elias", email="gergely.elias@gmail.com" },
]
description = "parser for eXtreme Gammon files"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[build-system]
requires = ["uv_build >= 0.11.0, <0.12.0"]
build-backend = "uv_build"

[project.urls]
"Homepage" = "https://github.com/gergely-elias/xgparse"
